article list padding and alignment fixes

--- a/node-app/src/views/core/components/form/container/style.scss
+++ b/node-app/src/views/core/components/form/container/style.scss
@@ -243,7 +243,7 @@
     }
 }
 //style for cta form input form alignment
-@media (max-width: $mobile-screen-max){
+@media (max-width: $tab-screen-max){
     .cta-form-wrapper{
         .cmp-form-text{
             input{
